--- a/src/common/components/MoviesLayout/MoviesLayout.module.css
+++ b/src/common/components/MoviesLayout/MoviesLayout.module.css
@@ -1,3 +1,11 @@
+.container{
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 15px;
+    display: flex;
+    justify-content: center;
+}
 .categoryButtons{
     display: flex;
     gap: 15px;
