--- a/src/app/styles/SectionsStyles.module.css
+++ b/src/app/styles/SectionsStyles.module.css
@@ -16,34 +16,8 @@
     grid-template-columns: repeat(6, minmax(0, 1fr));
     gap: 24px;
 }
-.favoritesBtn{
-    width: 50px;
-    height: 50px;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    border-radius: 25px;
-    border: none;
-    background: #26272a;
-    /*opacity: .3;*/
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    opacity: .8;
-    transition: .2s;
-    transform: translateY(-300px);
-}
-.favoritesBtn:hover{
-    opacity: 1;
-    background: #112b7c;
-}
-.favoritesBtn img{
-    width: 30px;
-}
-.favoritesBtn.favoritesBtnActive{
-    transform: translateY(0);
-}
-.favoritesBtnActive img{
-    width: 30px;
+.moviesWrapper.allMoviesWrapper{
+    display: grid;
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+    gap: 24px;
 }
