--- a/src/features/pagination/Pagination.module.css
+++ b/src/features/pagination/Pagination.module.css
@@ -14,6 +14,7 @@
     border: none;
     background: #e0e5ec;
     border-radius: 3px;
+    cursor: pointer;
 }
 .paginationBtnActive{
     background: #074c98;
