--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgb(0, 0, 0);
+    --text-color: #0c0a0a;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -17,4 +17,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+body.dark {
+    --bg-color: #080809;
+    --text-color: #f5f5f5;
+    --primary-color: #818cf8;
+}
+body {
+    background: var(--bg-color);
+    color: var(--text-color);
 }
