--- a/src/app/styles/SectionsStyles.module.css
+++ b/src/app/styles/SectionsStyles.module.css
@@ -10,6 +10,7 @@
     gap: 30px;
     flex-direction: column;
     position: relative;
+    padding-bottom: 50px;
 }
 .moviesWrapper{
     display: grid;
