--- a/src/features/Similar/Similar.module.css
+++ b/src/features/Similar/Similar.module.css
@@ -1,5 +1,6 @@
-.similar{
+.similarInner{
     display: grid;
     grid-template-columns: repeat(6, minmax(0, 1fr));
     gap: 24px;
+    padding: 20px 0 30px;
 }
