--- a/src/pages/MoviePage/MoviePage.module.css
+++ b/src/pages/MoviePage/MoviePage.module.css
@@ -3,6 +3,7 @@
     width: 100%;
     margin: 0 auto;
     padding: 0 15px;
+    position: relative;
 }
 .movieContent{
     padding-top: 30px;
@@ -49,13 +50,96 @@
     display: flex;
     gap: 15px;
 }
-.movieImg{
+.movieImgWrapper{
     width: 300px;
+    height: 450px;
+    flex-shrink: 0;
+}
+.movieImg{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     border-radius: 3px;
 }
 .rating{
     position: relative;
 }
 .backBtn{
+    position: absolute;
+    right: 30px;
+    top: 30px;
+    display: inline-block;
+    border: 1px solid #040d42;
+    color: var(--text-color);
+    align-self: flex-end;
+    padding: 5px 17px;
+    text-decoration: none;
+    border-radius: 3px;
+    transition: background-color .3s;
+    cursor: pointer;
+}
+.backBtn:hover{
+    background: #040d42;
+    color: #ffffff;
+}
+.skeleton {
+    width: 300px;
+    height: 450px;
+    flex-shrink: 0;
+    background: linear-gradient(
+            100deg,
+            #de1111 25%,
+            #1fb03c 37%,
+            #099ab4 63%
+    );
+    background-size: 150% 100%;
+    animation: shimmer 1.4s ease infinite;
+    border-radius: 4px;
+}
 
+@keyframes shimmer {
+    0% {
+        background-position: 100% 0;
+    }
+    100% {
+        background-position: 0 0;
+    }
+}
+
+/* размеры */
+
+.skeletonTitle {
+    height: 45px;
+    width: 70%;
+}
+
+.skeletonSubtitle {
+    height: 36px;
+    width: 120px;
+}
+
+.sceletonCastTitle{
+    height: 20px;
+    width: 300px;
+    margin: 30px 0;
+}
+
+.skeletonMeta {
+    height: 20px;
+    width: 50%;
+}
+
+.skeletonText {
+    height: 16px;
+    width: 100%;
+}
+
+.skeletonTag {
+    height: 34px;
+    width: 90px;
+}
+
+.skeletonCard {
+    height: 180px;
+    width: 100%;
 }
