доделана валидация ответов, красный значок рейтинга

--- a/src/entities/ui/RatingBadge/RatingBadge.module.css
+++ b/src/entities/ui/RatingBadge/RatingBadge.module.css
@@ -10,7 +10,11 @@
     background: #0f910c;
     color: #ffffff;
 }
-.negativeRating{
+.middleRating{
     background: #e5d80a;
     color: #091b70;
+}
+.negativeRating{
+    background: #e30f0f;
+    color: #ffffff;
 }
